RESOLVED FIXED282522
RemoteLayerTreeDrawingAreaProxy::connectionForIdentifier asserts when the web process has gone away
https://bugs.webkit.org/show_bug.cgi?id=282522
Summary RemoteLayerTreeDrawingAreaProxy::connectionForIdentifier asserts when the web...
Matt Woodrow
Reported 2024-11-03 18:15:11 PST
This can be called from async callbacks outside of WebKit, we can't assert the state of the web process at that time.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-11-03 18:22:18 PST
Matt Woodrow
Comment 2 2024-11-03 18:27:03 PST
EWS
Comment 3 2024-11-03 21:38:46 PST
Committed 286069@main (c009a15164a4): <https://commits.webkit.org/286069@main> Reviewed commits have been landed. Closing PR #36112 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.