RemoteLayerTreeDrawingAreaProxy::connectionForIdentifier asserts when the web process has gone away. https://bugs.webkit.org/show_bug.cgi?id=282522 rdar://139175100>

Reviewed by Charlie Wolfe.

This can be called from async callbacks outside of WebKit, we can't assert the
state of the web process at that time.

* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.h:
* Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::connectionForIdentifier):
(WebKit::RemoteLayerTreeDrawingAreaProxy::acceleratedAnimationDidStart):
(WebKit::RemoteLayerTreeDrawingAreaProxy::acceleratedAnimationDidEnd):

Canonical link: https://commits.webkit.org/286069@main