Source/WebKit/UIProcess/RemoteLayerTree/RemoteLayerTreeDrawingAreaProxy.h
@@ -113,7 +113,7 @@ protected:
 
     ProcessState& processStateForConnection(IPC::Connection&);
     const ProcessState& processStateForIdentifier(WebCore::ProcessIdentifier) const;
-    IPC::Connection& connectionForIdentifier(WebCore::ProcessIdentifier);
+    IPC::Connection* connectionForIdentifier(WebCore::ProcessIdentifier);
     void forEachProcessState(Function<void(ProcessState&, WebProcessProxy&)>&&);
 
 private:
